--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="https://human-errorr.github.io/website/assets/style.css" />
   </head>
 
   <body>
