--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 
     <section class="home" id="home">
       <h3>HI GUYS !</h3>
-      <h1>I'M <span>Fajri Arvandi</span></h1>
+      <h1>Saya <span>Fajri Arvandi</span></h1>
       <p>
-        I am a Muslim man, of Minang descent, who was born in Bogor in 1999.
-        Friends and colleagues call me "Fajri" and sometimes "Aji", but my
-        family usually calls me "brother", because I am the eldest of three
-        children. I have a dream to become a reliable programmer, able to create
-        a program or technology that can help and facilitate people's
-        activities.
+        Saya pria muslim keturunan Minang, yang lahir di Bogor tahun 1999.Teman
+        dan kolega memanggil saya "Fajri" dan terkadang "Aji", tapi saya
+        keluarga biasanya memanggil saya "abang", karena saya anak pertama dari
+        tiga bersaudara. Saya tertarik dengan dunia teknologi dan programming,
+        dan saya memiliki impian menjadi programmer yang handal, mampu membuat
+        program atau teknologi yang dapat membantu dan memudahkan kegiatan orang
+        orang.
       </p>
       <a href="#about"
         ><button class="btn">about me <i class="fas fa-user"></i></button
