--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- home section starts  -->
 
     <section class="home" id="home">
-      <h3>HI GUYS !</h3>
+      <h3>HI GUYS</h3>
       <h1>Saya <span>Fajri Arvandi</span></h1>
       <p>
         Saya pria muslim keturunan Minang, yang lahir di Bogor tahun 1999.Teman
