--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
       <nav class="navbar">
         <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="profile.html">profile</a></li>
-          <li><a href="education.html">education</a></li>
-          <li><a href="experience.html">work experience</a></li>
+          <li><a href="index.html">beranda</a></li>
+          <li><a href="profile.html">profil</a></li>
+          <li><a href="education.html">pendidikan</a></li>
+          <li><a href="experience.html">pengalaman kerja</a></li>
           <li><a href="portofolio.html">portfolio</a></li>
-          <li><a href="organization.html">organization</a></li>
+          <li><a href="organization.html">organisasi</a></li>
         </ul>
       </nav>
     </header>
