--- a/portofolio.html
+++ b/portofolio.html
@@ -46,19 +46,19 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="/gambar/fekz.png" alt="" />
+          <img src="https://human-errorr.github.io/website/gambar/fekz.png" alt="" />
         </div>
 
         <div class="box">
-          <img src="/gambar/uts.png" alt="" />
+          <img src="https://human-errorr.github.io/website/gambar/uts.png" alt="" />
         </div>
 
         <div class="box">
-          <img src="/gambar/latihan.png" alt="" />
+          <img src="https://human-errorr.github.io/website/gambar/latihan.png" alt="" />
         </div>
 
         <div class="box">
-          <img src="/gambar/cafe.jpg" alt="" />
+          <img src="https://human-errorr.github.io/website/gambar/cafe.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
 
     <div>
       <a href="index.html" class="top">
-        <img src="/gambar/home.webp" width="70px" />
+        <img src="https://human-errorr.github.io/website/gambar/home.webp" width="70px" />
       </a>
     </div>
   </body>
