--- a/profile.html
+++ b/profile.html
@@ -135,7 +135,7 @@
 
     <div>
       <a href="index.html" class="top">
-        <img src="/gambar/home.webp" width="70px" />
+        <img src="https://human-errorr.github.io/website/gambar/home.webp" width="70px" />
       </a>
     </div>
 
