--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       <h1>Saya <span>Fajri Arvandi</span></h1>
       <p>
         Saya pria muslim keturunan Minang, yang lahir di Bogor tahun 1999.Teman
-        dan kolega memanggil saya "Fajri" dan terkadang "Aji", tapi saya
-        keluarga biasanya memanggil saya "abang", karena saya anak pertama dari
-        tiga bersaudara. Saya tertarik dengan dunia teknologi dan programming,
+        dan kolega memanggil saya "Fajri" dan terkadang "Aji". Saya tertarik dengan dunia teknologi dan programming,
         dan saya memiliki impian menjadi programmer yang handal, mampu membuat
         program atau teknologi yang dapat membantu dan memudahkan kegiatan orang
         orang.
