--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/web-portofolio/assets/css/style.css" />
+    <link rel="stylesheet" href="https://fajrcode.github.io/web-portofolio/web-portofolio/assets/css/style.css" />
   </head>
 
   <body>
